# cade

./: ARCHITECTURE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_staging_schema.py
cade/: api.py  cli.py  diff.py  exceptions.py  hashing.py  models.py  query.py  repository.py
cade/backends/: parquet.py
cade/ingest/: __init__.py  assembler.py  config.py  exceptions.py  matrix_sync.py  runner.py  staging.py
scripts/: push_to_cade.sh
tests/: conftest.py  test_api.py  test_hashing.py  test_ingest_assembler.py  test_ingest_config.py  test_ingest_matrix_sync.py  test_ingest_staging.py  test_models.py  test_query.py  test_repository.py
ui/: app.py
